data/derived/comb/progs/unify/prog1156.ml.out
Characters 85-87:
  | hd::tl -> f hd hd + f tl tl
                          ^^
Error: This expression has type int list
       but an expression was expected of type int
